<?xml version="1.0" encoding="utf-8"?>
<!--
 	Copyright (C) 2012 Vitaly Oskalenko, oskalenkoVit@ukr.net 
 	This is an open source project that can be used for own purposes
 	but should be released under name of new owner
-->

<resources>
    <string name="app_name">Gismeteo weather</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">Weather forecast</string>
    <string name="title_activity_details">Detailed forecast</string>
    <string name="title_activity_search_result">Search results</string>
    <string name="title_activity_configurator">Widget adjustment</string>
    <string name="city_search">Adding a city</string>
    <string name="add_city">Add city</string>
    <string name="get_weather">Get weather</string>
    <string name="city">City</string>
    <string name="date">Date</string>
    <string name="temperature">"Temperature: %1$d...%2$d С"</string>
    <string name="relwet">"Relwet: %1$d...%2$d %3$s"</string>
    <string name="pressure">"Pressure: %1$d...%2$d mm Hg</string>
    <string name="wind">"Wind: %1$s %2$d...%3$d m/sec"</string>
    <string name="temperature2">"Temperature, С"</string>
    <string name="heat">Feels Like</string>
    <string name="pressure2">"Pressure, mm"</string>
    <string name="relwet2">"Relwet, %"</string>
    <string name="wind2">"Wind, m/sec"</string>
    <string name="cloudiness">Cloudiness</string>
    <string name="precipitation">Precipitation type</string>
    <string name="night">Night</string>
    <string name="morning">Morning</string>
    <string name="afternoon">Day</string>
    <string name="evening">Evening</string>
    <string name="previous_forecast">Previous forecast</string>
    <string name="tod">Weather on</string>
    <string name="search_city">Find a city</string>
    <string name="del_city">Remove city</string>
    <string name="confirm_append">Confirm</string>
    <string name="cancel_append">Cancel</string>
    <string name="confirm_delete">Confirm delete</string>
    <string name="alarm">Warning</string>
    <string name="cancel_delete">Cancel removing</string>
    <string name="unsuccessful_search">"Unsuccessful search by query [%s]"</string>
    <string name="successful_search">"In the list has been added [%s]"</string>
    <string name="search">Search</string>
    <string name="detailed_weather">Detailed weather in the city</string>
    <string name="widget_home_city">"Forecast for the city %s from GisMeteo.ua"</string>
    <string name="loading_content">Weather updates</string>
    <string name="server_connecting">Connection to the server</string>
    <string name="forming_weather_list">Creating a list of weather</string>
    <string name="forming_cities_list">Creating a list of cities</string>
    <string name="wait_Please">Please wait</string>
    <string name="active_update">Activate updates</string>
    <string name="update_daily">Once daily</string>
    <string name="update_twice">Twice a day</string>
    <string name="choose_favorite_city">"Select a city for the widget [%s]"</string>
    <string name="save_configure">Save changes</string>
    <string name="cancel_save">Cancel changes</string>
    <string name="manual_update">Manually update</string>
    <string name="wind_direction">Wind, direction</string>
    

    <string-array name="direction">
        <item>north</item>
        <item>north-east</item>
        <item>east</item>
        <item>south-east</item>
        <item>south</item>
        <item>south-west</item>
        <item>west</item>
        <item>north-west</item>
    </string-array>
    <string-array name="weekday">
        <item></item>
        <item>Sunday</item>
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
    </string-array>
    <string-array name="tod">
        <item>night</item>
        <item>morning</item>
        <item>day</item>
        <item>evening</item>
    </string-array>
    <string-array name="cloudiness">
        <item>clearly</item>
        <item>overcast</item>
        <item>cloudy</item>
        <item>gloomily</item>
    </string-array>
    <string-array name="precipitation">
        <item></item>
        <item></item>
        <item></item>
        <item></item>
        <item>rain</item>
        <item>Downpour</item>
        <item>snow</item>
        <item>snow</item>
        <item>thunderstorm</item>
        <item>no data</item>
        <item>No precip.</item>
    </string-array>

</resources>