<?xml version="1.0" encoding="utf-8"?>
<!--
 	Copyright (C) 2012 Vitaly Oskalenko, oskalenkoVit@ukr.net 
 	This is an open source project that can be used for own purposes
 	but should be released under name of new owner
-->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal" >

    <ImageView
        android:id="@+id/icon"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:scaleType="centerInside"
        android:src="@drawable/light_0cloud" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/city"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingRight="10dp"
            android:text="@string/city"
            android:textColor="#131B87"
            android:textSize="16sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/tod"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:paddingRight="5sp"
                android:text="@string/tod"
                android:textColor="#131B87"
                android:textSize="9sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/date"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/date"
                android:textColor="#131B87"
                android:textSize="9sp"
                android:textStyle="bold" />

        </LinearLayout>

        <TextView
            android:id="@+id/notCurrFr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/previous_forecast"
            android:textColor="#F18022"
            android:textSize="9sp"
            android:visibility="gone" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="10dp" >

            <TextView
                android:id="@+id/temperature"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/temperature"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/relwet"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/relwet"
                android:textSize="10sp" />

            <TextView
                android:id="@+id/pressure"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:text="@string/pressure"
                android:textSize="10sp" />

            <TextView
                android:id="@+id/wind"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/wind"
                android:textSize="10sp" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>