<?xml version="1.0" encoding="utf-8"?>
<!--
 	Copyright (C) 2012 Vitaly Oskalenko, oskalenkoVit@ukr.net 
 	This is an open source project that can be used for own purposes
 	but should be released under name of new owner
-->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/widget_background"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="25dp" >

            <TextView
                android:id="@+id/part_of_day0"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/evening"
                android:textSize="10sp" />

            <ImageView
                android:id="@+id/iconWidgetEvening"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:scaleType="centerInside"
                android:src="@drawable/light_0cloud" />

            <TextView
                android:id="@+id/txtWidgetTemper3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="0/0 C"
                android:textSize="10sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/part_of_day1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/night"
                android:textSize="10sp" />

            <ImageView
                android:id="@+id/iconWidgetNight"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:scaleType="centerInside"
                android:src="@drawable/light_0cloud" />

            <TextView
                android:id="@+id/txtWidgetTemper0"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="0/0 C"
                android:textSize="10sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/part_of_day2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/morning"
                android:textSize="10sp" />

            <ImageView
                android:id="@+id/iconWidgetMorning"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:scaleType="centerInside"
                android:src="@drawable/light_0cloud" />

            <TextView
                android:id="@+id/txtWidgetTemper1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="0/0 C"
                android:textSize="10sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/part_of_day3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/afternoon"
                android:textSize="10sp" />

            <ImageView
                android:id="@+id/iconWidgetAfternoon"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:scaleType="centerInside"
                android:src="@drawable/light_0cloud" />

            <TextView
                android:id="@+id/txtWidgetTemper2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="0/0 C"
                android:textSize="10sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

        </LinearLayout>

        <ImageView
            android:id="@+id/btnConfigure"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:clickable="true"
            android:src="@android:drawable/ic_menu_manage" />

    </LinearLayout>

    <TextView
        android:id="@+id/txtHomeCity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:paddingTop="3dp"
        android:text="@string/widget_home_city"
        android:textSize="8sp" />

</LinearLayout>